--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: lxhjob@gmail.com
 description: ""
 keyword: ""
 url: "https://Awnway.github.io"              # your host, for absolute URL
-baseurl: "/huxblog-boilerplate"         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
