--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ netease_comment: false
 
 # Analytics settings
 # Baidu Analytics 
-ba_track_id: 'b5bf30a1fbe3f3c314cc78cb2f75625e'
+ba_track_id: b5bf30a1fbe3f3c314cc78cb2f75625e
 
 # Google Analytics
 # ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
@@ -77,7 +77,7 @@ ba_track_id: 'b5bf30a1fbe3f3c314cc78cb2f75625e'
 
 
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
+sidebar: false                           # whether or not using Sidebar.
 sidebar-about-description: "Finding Out Why"
 sidebar-avatar: /      # use absolute URL, seeing it's used in both `/` and `/about/`
 
