--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: AwnWay
 SEOTitle: Awn's Blog
-header-img: 
-email: huxpro@gmail.com
+header-img:    #delete img because it is slow
+email: lxhjob@gmail.com
 description: ""
 keyword: ""
 url: "https://awnway.github.io"              # your host, for absolute URL
@@ -59,7 +59,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: hux
+disqus_username: false
 
 # Netease settings
 netease_comment: false
@@ -77,9 +77,9 @@ ba_track_id: b5bf30a1fbe3f3c314cc78cb2f75625e
 
 
 # Sidebar settings
-sidebar: false                           # whether or not using Sidebar.
+sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Finding Out Why"
-sidebar-avatar: /      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar:       # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
