--- a/_config.yml
+++ b/_config.yml
@@ -64,6 +64,8 @@ disqus_username: false
 # Netease settings
 netease_comment: false
 
+# gittalk settings
+gittalk_comment: true
 
 
 # Analytics settings
